--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ openpyxl==3.1.2
 pyinstaller>=5.13.0
 Pillow>=10.0.0
 weasyprint>=60.0
+google-auth>=2.23.0
+google-auth-oauthlib>=1.0.0
+google-auth-httplib2>=0.1.0
