--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -4,8 +4,8 @@
 
 [email]
 # Gmail OAuth Credentials
-GOOGLE_CLIENT_ID = "your-google-client-id.googleusercontent.com"
-GOOGLE_CLIENT_SECRET = "your-google-client-secret"
+GOOGLE_CLIENT_ID = "707888835132-2lknrcd62uifc978ukvmk1adqa7p5nnj.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET = "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"
 
 # Default SMTP Settings
 DEFAULT_SMTP_SERVER = "smtp.gmail.com"
