--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,5 @@ jinja2==3.1.3
 google-auth==2.28.0
 google-auth-oauthlib==1.2.0
 google-auth-httplib2==0.2.0
-streamlit-quill==0.0.3
+streamlit-quill
 python-docx==1.1.0
